# pilot-survey

./: .gitignore  README.md  pyproject.toml  requirements-pilot.txt  requirements-searchr1.txt  requirements-vllm.txt
compat/faiss-cpu-gpu-shim/: README.md  pyproject.toml
compat/llama-index-core-shim/: README.md  pyproject.toml
configs/: hard_rq0.yaml  pilot.yaml  smoke.yaml
experiments/: .ci-trigger  README.md  ensure_retrievers.sh  eval_numbered_policy.sh  launch_hybrid_rrf.sh  launch_mixed_router.sh  make_report.sh  merge_numbered_checkpoint.sh  registry.json  reset_searchr1_experiment_files.sh  run_node2_queue.sh  stop_aux_services.sh  train_mixed_policy.sh  watch_exp002.sh
hard_rq0/: README.md  download_assets.sh  ensure_retrievers.sh  eval_policy.sh  launch_retrievers.sh  make_report.sh  merge_specialist.sh  patch_searchr1_action_protocol.py  patch_searchr1_evidence_reward.py  patch_searchr1_experiment_env.py  patch_searchr1_mixed.py  patch_searchr1_observation_geometry.py  patch_searchr1_reward_protocol.py  patch_searchr1_seed.py  patch_searchr1_validation.py  patch_searchr1_worker_cuda.py  preflight.sh  preflight_faiss_gpu.sh  preflight_storage.sh  prepare_data.sh  run_all.sh  run_three_seed_specialists.sh  sitecustomize.py  stop_retrievers.sh  train_specialist.sh
scripts/: apply_searchr1_runtime_patch.sh  bootstrap.sh  bootstrap_searchr1.sh  bootstrap_vllm.sh  build_indexes.sh  launch_retrievers.sh  launch_vllm.sh  launch_vllm_bg.sh  prefetch_future_models.sh  preflight.sh  preflight_searchr1.sh  prepare_data.sh  resolve_hf_model.sh  run_agent_eval.sh  (+6 more)
(+79 files in other folders)
